--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 pandas==1.3.4
 plotly==5.3.0
-streamlit==1.8.1
 openpyxl==3.0.5
 gspread==5.3.2
 numpy==1.22.4
-xlrd==2.0.1
+xlrd==1.2.0
+streamlit==1.8.1
+streamlit-lottie==0.0.3
+streamlit-option-menu==0.3.2 
+streamlit-player==0.1.5 
+gspread-pandas==2.2.3
