--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-pandas==1.3.4
-openpyxl==3.0.5
 gspread==5.3.2
 numpy==1.22.4
-xlrd==1.2.0
-streamlit==1.8.1
-streamlit-lottie==0.0.3
-streamlit-option-menu==0.3.2 
-streamlit-player==0.1.5 
-gspread-pandas==2.2.3
-jinja2==3.1.1
-jinja2-time==0.2.0
-protobuf==3.20.1
+pandas==1.4.2
+plotly_express==0.4.1
+streamlit==1.9.2
+xlrd==2.0.1
